tests/reference/asr-test_const_dict-59445d7.stderr
semantic error: cannot pop elements from a const dict
 --> tests/errors/test_const_dict.py:6:11
  |
6 |     print(CONST_DICTIONARY.pop("a"))
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^ 
